--- a/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
+++ b/src/app/admin/features/channel_setting/Reports/trai-report/trai-report.component.html
@@ -1,7 +1,7 @@
 <h4>Trai Reports</h4>
 <!-- ------------------------------PACKAGE BASED REPORT---------------------------------------------- -->
 <div style="max-height: 740px; overflow: scroll;overflow-x: hidden;">
-    <!-- <section> -->
+    <section>
         <mat-accordion class="example-headers-align">
             <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
                 <mat-expansion-panel-header>
@@ -41,9 +41,9 @@
 
             </mat-expansion-panel>
         </mat-accordion>
-    <!-- </section> -->
+    </section>
     <!-- ------------------------------Subscription based reports--------------------------------- -->
-    <!-- <section> -->
+    <section>
         <mat-accordion class="example-headers-align">
             <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
                 <mat-expansion-panel-header>
@@ -92,9 +92,9 @@
                 </div>
             </mat-expansion-panel>
         </mat-accordion>
-    <!-- </section> -->
+    </section>
     <!-- -------------------------------Broadcaster Reports----------------------------------- -->
-    <!-- <section> -->
+    <section>
         <mat-accordion class="example-headers-align">
             <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
                 <mat-expansion-panel-header>
@@ -132,9 +132,9 @@
                 </div>
             </mat-expansion-panel>
         </mat-accordion>
-    <!-- </section> -->
+    </section>
     <!-- --------------------------------History Reports-------------------------------------------------------- -->
-    <!-- <section> -->
+    <section>
         <mat-accordion class="example-headers-align">
             <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
                 <mat-expansion-panel-header>
@@ -164,9 +164,9 @@
                 </div>
             </mat-expansion-panel>
         </mat-accordion>
-    <!-- </section> -->
+    </section>
     <!-- --------------------------------Suspend reports----------------------------------------------------------- -->
-    <!-- <section> -->
+    <section>
         <mat-accordion class="example-headers-align">
             <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
                 <mat-expansion-panel-header>
@@ -191,9 +191,9 @@
                 </div>
             </mat-expansion-panel>
         </mat-accordion>
-    <!-- </section> -->
+    </section>
     <!-- -------------------------------CAS operation reports (Historical Reports)----------------------------------------------------- -->
-    <!-- <section> -->
+    <section>
         <mat-accordion class="example-headers-align">
             <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
                 <mat-expansion-panel-header>
@@ -223,10 +223,10 @@
                 </div>
             </mat-expansion-panel>
         </mat-accordion>
-    <!-- </section> -->
+    </section>
 
     <!-- --------------------------------count reports---------------------------------------------------------- -->
-    <!-- <section> -->
+    <section>
         <mat-accordion class="example-headers-align">
             <mat-expansion-panel [expanded]="step() === 0" (opened)="setStep(0)" hideToggle class="pannel">
                 <mat-expansion-panel-header>
@@ -246,7 +246,7 @@
                 </div>
             </mat-expansion-panel>
         </mat-accordion>
-    <!-- </section> -->
+    </section>
     <!-- --------------------------------count reports---------------------------------------------------------- -->
     <!-- <div style="background-color: rgba(109, 107, 107, 0.8);padding: 1rem;">
     <h3 style="color: rgb(255, 255, 255);">COUNT REPORTS</h3>
