--- a/src/app/admin/features/channel_setting/Reports_page/Trai/package-based/package-based.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/package-based/package-based.component.html
@@ -25,14 +25,14 @@
         <div class="mobile">
             <div class="col-6 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
                 style="cursor: pointer;margin-top: -4%;">
-                <div class="icon-container" (click)="getPackage_AddonExcel()">
+                <div class="icon-container" (click)="getPackage_AddonPDF(2)">
                     <img src="/assets/images/icons/Excel.png" width="40px">
                     <div class="tooltip">Excel</div>
                 </div>
             </div>
             <div class="col-6 col-md-2 d-flex justify-content-center align-items-center tooltip-container"
                 style="cursor: pointer;margin-top: -4%;">
-                <div class="icon-container" (click)="getPackage_AddonPDF()">
+                <div class="icon-container" (click)="getPackage_AddonPDF(1)">
                     <img src="/assets/images/icons/pdf.png" width="40px">
                     <div class="tooltip">Pdf</div>
                 </div>
