--- a/src/app/admin/features/home/home.component.html
+++ b/src/app/admin/features/home/home.component.html
@@ -1,5 +1,5 @@
 <!-- <section class="content1" style="max-height: 800px;overflow: scroll;"> -->
-<section class="content1" >
+<section class="content1">
     <div class="row g-6 mb-6">
         <!-- <div class="col-xl-7 col-sm-6 col-12">
             <div class="card">
@@ -12,7 +12,7 @@
                 </div>
             </div>
         </div> -->
-        
+
 
         <div class="col-xl-6 col-sm-6 col-12">
             <div class="card">
@@ -41,17 +41,7 @@
 
     <div class="row g-6 mb-6">
 
-        <!-- <div class="col-xl-5 col-sm-6 col-12">
-            <div class="card">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col">
-                            <app-package-chart></app-package-chart>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
+
 
         <div class="col-xl-12 col-sm-12 col-12">
             <div class="card">
@@ -65,5 +55,21 @@
                 </div>
             </div>
         </div>
+        <!-- <div class="col-xl-6 col-sm-6 col-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col">
+                            <ag-grid-angular #agGrid id="myGrid"
+                                style="max-height: 450px;overflow: scroll;overflow-y: hidden;overflow-x: hidden;"
+                                domLayout='normal' class="ag-theme-alpine table-class" rowAnimation
+                                [gridOptions]="gridOptions" [columnDefs]="columnnDefs" [rowData]="rowData"
+                                [enableCellTextSelection]="true">
+                            </ag-grid-angular>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
     </div>
 </section>
