--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,7 +88,7 @@ h6 {
 body {
     min-height: 100vh;
     // background-color: white;
-    // background-color: #f4f7fa;
+    background-color: #e9edf4;
     transition: var(--tran-05);
     // background: linear-gradient(to right, #058372, #acf3cc);
 }
