--- a/src/app/_core/charts/bar-chart/bar-chart.component.html
+++ b/src/app/_core/charts/bar-chart/bar-chart.component.html
@@ -1,7 +1,8 @@
 <!-- <div>
   <canvasjs-chart [options]="chartOptions" [styles]="{width: '100%', height:'360px',}"></canvasjs-chart>
 </div> -->
-<h6 style="text-align: center;color:rgb(27 26 26);">NEXT 7 DAYS SUBSCRIPTION EXPIRED COUNT</h6>
+<h6 style="text-align: center;color:rgb(27 26 26); font-family: 'poppins';">NEXT 7 DAYS SUBSCRIPTION EXPIRED
+  COUNT</h6>
 <div>
   <div class="input_box col-6 col-md-4 d-flex justify-content-between align-items-center mt-1 mb-2">
     <div class="col-12 col-md-6">
@@ -18,7 +19,3 @@
 </div>
 
 <!-- <div id="chartdiv"></div> -->
-
-
-
-
