--- a/src/app/admin/features/inventory_role/cortonbox/cortonbox.component.html
+++ b/src/app/admin/features/inventory_role/cortonbox/cortonbox.component.html
@@ -25,7 +25,7 @@
         </mat-form-field> -->
 
         <mat-form-field class="w-100" appearance="outline">
-            <mat-label>Select Addon</mat-label>
+            <mat-label>Select CartonBox</mat-label>
             <mat-select [formControl]="toppings" multiple [(ngModel)]="cortonBox" (selectionChange)="onCortonBoxChange($event.value)" >
                 <mat-option *ngFor="let box of cortonBoxList" [value]="box" >
                     {{ box }}
